--- a/package.json
+++ b/package.json
@@ -1,46 +1,42 @@
 {
-  "name": "eslint-config-ghu",
+  "name": "clean-code",
   "version": "0.1.0",
-  "description": "Eslint config ghu",
-  "main": "index.js",
+  "description": "clean code",
   "scripts": {
-    "test": "jest",
-    "prepare": "cd .. && husky install"
+    "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/goransh/clean-code.git"
   },
-  "keywords": [
-    "eslint",
-    "config",
-    "typescript",
-    "react",
-    "angular"
-  ],
   "author": "Gøran Humlestøl",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/goransh/clean-code/issues"
   },
   "homepage": "https://github.com/goransh/clean-code#readme",
-  "dependencies": {
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
+    "eslint-config-ghu": "file:eslint",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.1"
-  },
-  "devDependencies": {
-    "@types/eslint": "^7.2.13",
-    "@types/jest": "^26.0.23",
-    "jest": "^27.0.4",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.4",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "lerna": "^4.0.0",
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.4"
   }
 }
