--- a/package.json
+++ b/package.json
@@ -2,19 +2,7 @@
   "name": "clean-code",
   "version": "0.1.0",
   "description": "clean code",
-  "scripts": {
-    "prepare": "husky install"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
-    ]
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/goransh/clean-code.git"
@@ -34,7 +22,6 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
     "lerna": "^4.0.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.4"
