--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,19 @@
   "extends": [
     "./eslint/src/configs/all"
   ],
+  "plugins": [
+    "jest"
+  ],
+  "ignorePatterns": [
+    "**/jest.config.ts",
+    "**/jest-resolver.ts"
+  ],
   "env": {
     "browser": true,
     "node": true
+  },
+  "rules": {
+    "@typescript-eslint/unbound-method": "off",
+    "jest/unbound-method": "error"
   }
 }
