--- a/eslint/package.json
+++ b/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-ghu",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Eslint config ghu",
   "main": "dist/index.js",
   "files": [
@@ -32,26 +32,26 @@
     "@typescript-eslint/eslint-plugin": ">= 5.*",
     "@typescript-eslint/parser": ">= 5.*",
     "eslint": ">=8.*",
-    "eslint-config-prettier": ">= 8.*",
     "eslint-plugin-eslint-comments": ">= 3.*",
     "eslint-plugin-import": ">= 2",
     "eslint-plugin-prettier": ">= 4.*",
     "prettier": ">= 2.*"
   },
   "devDependencies": {
-    "@types/eslint": "^7.28.2",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/eslint": "^8.4.1",
+    "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "enhanced-resolve": "^5.9.0",
+    "eslint": "^8.8.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
