--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   },
   "homepage": "https://github.com/goransh/clean-code#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
     "eslint-config-ghu": "file:eslint",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "lerna": "^4.0.0",
-    "prettier": "^2.3.1",
-    "typescript": "^4.3.4"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   }
 }
