--- a/eslint/package.json
+++ b/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-ghu",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0-beta.2",
   "description": "Eslint config ghu",
   "main": "dist/index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "test": "jest"
   },
   "repository": {
@@ -47,7 +47,6 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^8.0.3",
     "jest": "^29.6.4",
     "prettier": "^3.0.2",
     "ts-jest": "^29.1.1",
