Refactor project to only include eslint config

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,5 +4,8 @@
     "allowJs": true,
     "declaration": false
   },
-  "exclude": ["tests"]
+  "exclude": [
+    "tests",
+    ".eslintrc.js"
+  ]
 }
