--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "strictNullChecks": true,
     "downlevelIteration": true,
   },
-  "include": ["src", "tests"],
+  "include": [
+    "src",
+    "tests",
+    ".eslintrc.js"
+  ],
   "exclude": ["node_modules"]
 }
