--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-ghu",
   "version": "1.0.0-beta.2",
-  "description": "Eslint config ghu",
+  "description": "A very opinionated, batteries-included eslint config.",
   "main": "dist/index.js",
   "files": [
     "dist/**"
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goransh/clean-code.git"
+    "url": "git+https://github.com/goransh/eslint-config-ghu.git"
   },
   "keywords": [
     "eslint",
