--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-ghu",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "A very opinionated, batteries-included eslint config.",
   "main": "dist/index.js",
   "files": [
